--- a/_config.yml
+++ b/_config.yml
@@ -12,9 +12,9 @@ email: minjia4@ualberta.ca
 # If you don't need one of them, you may delete the corresponding line.
 google_scholar: https://papers.ssrn.com/sol3/cf_dev/AbsByAuth.cfm?per_id=3709935
 cv_link: assets/files/cv.pdf
-#github_link: https://github.com/
+github_link: https://github.com/
 linkedin: https://linkedin.com/in/minjiali
-#twitter: https://twitter.com/
+twitter: https://twitter.com/
 
 # Images (e.g., your profile picture and your website's favicon) 
 # "favicon" and "favicon_dark" are used for the light and dark modes, respectively. 
